learn2turn/src/objects/KKTest__c.object
<CustomObject>
    <fields>
        <fullName>ExperFormulaField1A__c</fullName>
        <formula>$Setup.ExperCustomSetting1A__c.ExperTest1A__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ExperFormulaField1A</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExperPushDown__c</fullName>
        <label>ExperPushDown</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Extra_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Extra User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>KKTests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NewestChildAdded__c</fullName>
        <label>NewestChildAdded</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>NewestChild__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>NewestChild</label>
        <referenceTo>KKTestChild__c</referenceTo>
        <relationshipLabel>KKTests</relationshipLabel>
        <relationshipName>KKTests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SetByProcess__c</fullName>
        <defaultValue>0</defaultValue>
        <label>SetByProcess</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SetByTrigger__c</fullName>
        <defaultValue>0</defaultValue>
        <label>SetByTrigger</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SetByWorkflow__c</fullName>
        <defaultValue>0</defaultValue>
        <label>SetByWorkflow</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SimpleText__c</fullName>
        <label>SimpleText</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TestAutoNumber__c</fullName>
        <displayFormat>TN-{0000000}</displayFormat>
        <label>TestAutoNumber</label>
        <type>AutoNumber</type>
    </fields>
    <label>KKTest</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>KKTest Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>KKTests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>